Fixed SubpageTitle spacing on larger monitors
Subpage title now scales properly on larger monitors. Not perect (hard coded, will be changed shortly) but a quick patch.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@
 	pointer-events: none;
 	position: absolute;
 	opacity: 1;
-	width: 100%;
+	width: calc(100% - 310px );
 	top: 0px;
 	text-align: center;
 	color: #f2f2f2;
